--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,5 +1,5 @@
 # Global Values
-repoUrl: "https://github.com/aws-samples/eks-blueprints-add-ons.git"
+repoUrl: "https://github.com/flask-mario/eks-blueprints-add-ons.git"
 targetRevision: HEAD
 region: ""
 account: ""
@@ -63,7 +63,7 @@ gatekeeper:
 
 # Nginx Values
 ingressNginx:
-  enable: true
+  enable: false
 
 # Karpenter Values
 karpenter: 
